# benchmarking_shadow-builder

./: .gitignore  .gitmodules  3rd-party-licenses.md  CMakeLists.txt  LICENSE  README.md  main.cpp  prepare_build.sh
CMakeMacros/: CMakeTesting.txt  autorecheck.sh
common/: CMakeLists.txt
common/inc/common/: BaseConfig.h.in  CommIPC.h  Commentaries.h  Console.h  FileSystem.h  Status.h  StringMan.h  TestsConfig.h  TestsConfig.h.in
common/src/: CommIPC.cpp  FileSystem.cpp  Status.cpp  StringMan.cpp  Synchronisation.cpp
common/tests/: client_server_01.cpp  files_01.cpp  status_01.cpp  string_01.cpp
examples/: README.md
examples/example_loop_main/: CMakeLists.txt  README.md
examples/example_stupid_main/: CMakeLists.txt  README.md  main.c
res/: README.md
res/sb-res/: bcf.xml.in
res/tfa-res/: tfa.xml.in
res/tools/: path.sh  path.sh.in
res/tools/plugin_creator/: README.md  create_plugin.sh
res/tools/plugin_creator/template_plugin/: CMakeLists.txt
res/tools/plugin_creator/template_plugin/inc/template_plugin/: template_plugin.h
res/tools/plugin_creator/template_plugin/src/: template_plugin.cpp
shadow-builder/: CMakeLists.txt  README.md
shadow-builder/inc/shadow-builder/: BenchMarks.h  CodeParser.h  GitHelper.h  RepoHelper.h  ShadowBuilder.h  XMLConfiguration.h
shadow-builder/src/: ClangParser.cpp  CodeParser.cpp  ShadowBuilder.cpp
shadow-builder/tests/: CoderParser_01.cpp  GitHelper_01.cpp  ShadowBuilder_01.cpp
tfa-plugins/: CMakeLists.txt  README.md
tfa-plugins/TimeBenchmarking/: CMakeLists.txt
tfa-plugins/TimeBenchmarking/inc/TimeBenchmarking/: TimeBenchmarking.h
tfa-plugins/TimeBenchmarking/src/: TimeBenchmarking.cpp
tfa-plugins/myplugin/: CMakeLists.txt
tfa-plugins/myplugin/inc/plug-inc/: plug.h
tfa-plugins/myplugin/src/: main.cpp  plugin.cpp
tfa-plugins/plugin_template/: CMakeLists.txt
tfa-plugins/plugin_template/inc/plugin_template/: plugin_template.h
tfa-plugins/plugin_template/src/: plugin_template.cpp
tfa-plugins/plugin_test/: CMakeLists.txt  README.md
tfa-plugins/plugin_test/inc/: plugin_test.h
tfa-plugins/plugin_test/src/: plugin_test.cpp
tfa_core/: CMakeLists.txt  README.md
tfa_core/inc/tfa/: IPlugin.h  ITFACommentListener.h  TFABenchMarkingPlatform.h  TFAPluginInfo.h
tfa_core/inc/tfa_pr/: PluginLoader.h  PluginMngr.h  TFA.h  TFACore.h
tfa_core/src/: ITFACommentListener.cpp  PluginLoader.cpp  PluginMngr.cpp  TFABenchMarkingPlatform.cpp  TFACore.cpp
tfa_core/tests/: plugins_01.cpp  test_01_tfa.c
tutorial/01_create_plugin_time/: README.md
